--- a/index.html
+++ b/index.html
@@ -4,10 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Dilla</h1>
-    Hello World!
+    <header>
+        <!-- Logo Web -->
+        <img src="images/logo.png" alt="Logo" width="100">
+    </header>
+    <nav>
+        <!-- Menu Navigasi: Home, Classes, About Us, Nutrition, Contact Us -->
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="classes.html">Classes</a></li>
+            <li><a href="about-us.html">About Us</a></li>
+            <li><a href="nutrition.html">Nutrition</a></li>
+            <li><a href="contact-us.html">Contact Us</a></li>
+        </ul>
+        <!-- <ol>
+            <li>Home</li>
+            <li>Classes</li>
+            <li>About Us</li>
+            <li>Nutrition</li>
+            <li>Contact Us</li>
+        </ol> -->
+    </nav>
+    <main>
+        <!-- Hero Images -->
+        <div id="hero-images">
+            <img src="images/hero-min.jpg" alt="Hero Image">
+        </div>
+        <!-- Main Content -->
+    </main>
+    <footer>
+        <!-- Copyright Web -->
+        <div class="copy">
+            <p>&copy; Copyright 2022. All right reserved.</p>
+        </div>
+    </footer>    
 </body>
 </html>
