--- a/index.html
+++ b/index.html
@@ -8,26 +8,49 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <!-- Logo Web -->
-        <img src="images/logo.png" alt="Logo" width="100">
-    </header>
-    <nav>
-        <!-- Menu Navigasi: Home, Classes, About Us, Nutrition, Contact Us -->
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="classes.html">Classes</a></li>
-            <li><a href="about-us.html">About Us</a></li>
-            <li><a href="nutrition.html">Nutrition</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <div class="navbar">
+        <header>
+            <!-- Logo Web -->
+            <img src="images/logo.png" alt="Logo" width="70">
+        </header>
+        <nav>
+            <!-- Menu Navigasi: Home, Classes, About Us, Nutrition, Contact Us -->
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="classes.html">Classes</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="nutrition.html">Nutrition</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
     <main>
         <!-- Hero Images -->
-        <div id="hero-images">
-            <img src="images/hero-min.jpg" alt="Hero Image">
-        </div>
+        <div id="hero-images"></div>
         <!-- Main Content -->
+        <div class="container">
+            <div class="content">
+                <h2>Heading</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda aut dicta labore expedita et iusto, a officiis repellendus culpa eius eum error provident vel ullam eveniet, laudantium eligendi quas! Maxime accusamus quae deleniti ratione voluptas? Nisi mollitia repellendus ipsum aliquid dignissimos, cupiditate quisquam eligendi minima. Non voluptatibus eaque sed minima omnis consectetur expedita ut sapiente recusandae? Vitae, corrupti vero dolore ea dolor eius molestias accusamus ab suscipit modi voluptatibus, totam aspernatur officiis adipisci officia natus veniam expedita? Possimus numquam beatae quas eos eum? Ducimus mollitia eligendi corrupti ut debitis eos, commodi exercitationem maxime eius eaque, culpa ea impedit explicabo fugit provident quas illo nihil quaerat repellendus deserunt fugiat? Temporibus expedita, rerum accusantium vel quis quos aperiam repellendus. Consequatur facilis dolore, deleniti perspiciatis voluptate placeat minus velit accusantium. Ex non, saepe ad error earum esse! Nemo ducimus eius tenetur earum, quis aliquam odit, nulla vitae necessitatibus enim, modi deleniti laboriosam expedita corrupti animi dolores consequuntur autem? Harum quo hic laudantium, debitis illum sequi alias eius natus fuga dolor doloribus consectetur iusto suscipit tempore numquam deserunt dicta rerum obcaecati incidunt nesciunt deleniti. Earum numquam dolorum quo illo, error iste doloremque laboriosam ipsam unde. Aspernatur velit error expedita libero molestias est deserunt tempora?</p>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="p-2">
+                        <img src="images/hero-min.jpg" alt="" class="w-100">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-2">
+                        <img src="images/hero-min.jpg" alt="" class="w-100">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="p-2">
+                        <img src="images/hero-min.jpg" alt="" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <!-- Copyright Web -->
