--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <!-- Main Content -->
         <div class="container">
             <div class="content">
-                <h2>Heading</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda aut dicta labore expedita et iusto, a officiis repellendus culpa eius eum error provident vel ullam eveniet, laudantium eligendi quas! Maxime accusamus quae deleniti ratione voluptas? Nisi mollitia repellendus ipsum aliquid dignissimos, cupiditate quisquam eligendi minima. Non voluptatibus eaque sed minima omnis consectetur expedita ut sapiente recusandae? Vitae, corrupti vero dolore ea dolor eius molestias accusamus ab suscipit modi voluptatibus, totam aspernatur officiis adipisci officia natus veniam expedita? Possimus numquam beatae quas eos eum? Ducimus mollitia eligendi corrupti ut debitis eos, commodi exercitationem maxime eius eaque, culpa ea impedit explicabo fugit provident quas illo nihil quaerat repellendus deserunt fugiat? Temporibus expedita, rerum accusantium vel quis quos aperiam repellendus. Consequatur facilis dolore, deleniti perspiciatis voluptate placeat minus velit accusantium. Ex non, saepe ad error earum esse! Nemo ducimus eius tenetur earum, quis aliquam odit, nulla vitae necessitatibus enim, modi deleniti laboriosam expedita corrupti animi dolores consequuntur autem? Harum quo hic laudantium, debitis illum sequi alias eius natus fuga dolor doloribus consectetur iusto suscipit tempore numquam deserunt dicta rerum obcaecati incidunt nesciunt deleniti. Earum numquam dolorum quo illo, error iste doloremque laboriosam ipsam unde. Aspernatur velit error expedita libero molestias est deserunt tempora?</p>
+                <h1>Fitness</h1>
+                <h2>Nggak perlu mahal-mahal bayar gym biar bisa olahraga setiap hari. </h2>
+                <p>
+                    Mau badan berotot tapi gak ada waktu dan duit lebih buat bayar gym? Pake aplikasi workout dari smartphone aja, sob! Program workout dari aplikasi ada banyak macamnya, dari yang gratis sampe yang berbayar. Ada banyak banget pilihan fitur yang simpel dan gampang dimengerti. Sepulang kuliah atau kerja, lo bisa olahraga di kamar atau ruang tamu bermodalkan panduan gratisan yang ada di website ini. Gak ada lagi alesan gak bisa olahraga karena gak ada waktu.</p>
             </div>
             <div class="row">
                 <div class="col">
